# Zyntra-AI

./: .env.example  .gitignore  API_TESTING.md  CHAT_FIX.md  FRONTEND_INTEGRATION.md  IMPLEMENTATION_SUMMARY.md  QUICKSTART.md  QUICKSTART_FILEBASED.md  README.md  SAVE_IMPLEMENTATION.md  SETUP.md  START_HERE.md  main.py  main_updated.py  project_structure.txt  pyproject.toml  requirements.txt  run.py  test_agent.py  test_api.py  test_auth.py  test_chat.py  test_chat_service.py  test_frontend_integration.py  test_persistence.py  test_runner.py  test_search.py  test_stream.py
data/: messages.json  refresh_tokens.json  sessions.json  users.json
scripts/: init_database.py  rename_zyntra.py  rename_zyntra_md.py  update_env.py
src/agents/main_agent/: agent.py
src/agents/prompts/: __init__.py  coding_prompt.py  conversation_prompt.py  fallback_prompt.py  greeting_prompt.py  planner_prompt.py  research_prompt.py  summarizer_prompt.py  system_prompt.py
src/agents/runner/: __init__.py  agent_runner.py  chat_runner.py  main_runner.py  session_runner.py
src/agents/sessions/: __init__.py  chat_session.py  memory_session.py  session_manager.py  (+1 more)
src/api/: __init__.py
src/core/: __init__.py  config.py  database.py  llm.py  security.py
src/models/: database_models.py  schemas.py
src/persistence/: __init__.py  file_persistence.py  mysql_persistence.py
src/repositories/: __init__.py  message_repository.py  session_repository.py  user_repository.py
src/services/: auth_service.py  rag_service.py  voice_service.py
src/static/: auth.html  index.html
src/utils/: logger.py
(+22 files in other folders)
