[project]
name = "adk-chatbot"
version = "1.0.0"
description = "Production-ready multi-agent chatbot powered by Google ADK with MySQL persistence"
readme = "README.md"
requires-python = ">=3.14"
authors = [
    {name = "Your Name", email = "your.email@example.com"}
]
dependencies = [
    "fastapi>=0.137.1",
    "uvicorn>=0.49.0",
    "google-adk>=2.2.0",
    "google-generativeai>=0.8.6",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.14.2",
    "python-dotenv>=1.2.2",
    "mysql-connector-python>=8.0.33",
    "sqlalchemy>=2.0.0",
    "python-jose[cryptography]>=3.3.0",
    "passlib[bcrypt]>=1.7.4",
    "duckduckgo-search>=6.0.0",
    "edge-tts>=6.1.10",
    "chromadb>=0.5.0",
    "pdfplumber>=0.11.0",
    "python-docx>=1.1.0",
    "markdown>=3.6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "black>=23.0.0",
    "flake8>=6.0.0",
    "mypy>=1.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.black]
line-length = 88
target-version = ['py314']

[tool.mypy]
python_version = "3.14"
warn_return_any = true
warn_unused_configs = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
